Update autocommit workflow

--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -3,9 +3,9 @@ name: Auto Commit
 on:
   push:
     branches:
-      - main  # або master, залежно від вашої гілки
+      - main
   schedule:
-    - cron: "*/10 * * * *"  # Виконувати кожні 10 хвилин
+    - cron: "0 */1 * * *"  # Run every hour instead of every 10 minutes
 
 jobs:
   auto-commit:
@@ -14,14 +14,23 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Git
         run: |
-          git config user.name "Auto Commit Bot"
-          git config user.email "bot@example.com"
+          git config user.name "GitHub Actions Bot"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-      - name: Commit and push changes
+      - name: Check and commit changes
         run: |
-          git add .
-          git commit -m "Auto-commit: Зміни у проєкті" -m "Опис змін:\n- Автоматизовано через GitHub Actions"
-          git push
+          if [[ -n "$(git status --porcelain)" ]]; then
+            git add .
+            git commit -m "Auto-commit: Зміни у проєкті" -m "Опис змін:\n- Автоматизовано через GitHub Actions"
+            git push
+          else
+            echo "No changes to commit"
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
