--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
 # Лінтери та форматери
-black==23.12.1
+black==24.1.1
 flake8==7.0.0
 pylint==3.0.3
 isort==5.13.2
 autopep8==2.0.4
+yapf==0.40.2
 
 # Типи та статичний аналіз
 mypy==1.8.0
 pyright==1.1.350
 
 # Тестування та покриття коду
-pytest==7.4.4
+pytest==8.0.0
 pytest-cov==4.1.0
 coverage==7.4.0
 
