--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,11 +4,14 @@
     "workspaceFolder": "/workspace",
     "image": "mcr.microsoft.com/devcontainers/python:1-3.12",
     "remoteUser": "vscode",
+    "updateRemoteUserUID": true,
+    "containerUser": "vscode",
     "remoteEnv": {
         "GIT_SSH_COMMAND": "ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null",
         "SYNC_LOCALHOST_KUBECONFIG": "true",
         "LOCAL_WORKSPACE_FOLDER": "${localWorkspaceFolder}",
-        "VIRTUAL_ENV_PROMPT": "($$$) "
+        "VIRTUAL_ENV_PROMPT": "($$$) ",
+        "SHELL": "/bin/bash"
     },
     "customizations": {
         "vscode": {
@@ -86,10 +89,11 @@
                 "git.confirmSync": false,
                 "git.enableCommitSigning": true,
                 "git.postCommitCommand": "push",
-
                 "git.enableSmartCommit": true,
                 "git.autoStash": true,
                 "git.autoSync": true,
+                "git.name": "Oleg Kizyma",
+                "git.email": "oleg1203@gmail.com",
                 "update.mode": "default",
                 "update.channel": "insiders",
                 "remote.extensionKind": {
@@ -154,5 +158,14 @@
         "source=${localEnv:HOME}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached",
         "source=${localWorkspaceFolder}/.continue,target=/home/vscode/.continue,type=bind,consistency=cached"
     ],
-    "postCreateCommand": "python3 -m venv .venv && . .venv/bin/activate && python3 -m pip install --upgrade pip setuptools wheel && if [ -f /workspace/requirements.txt ]; then pip install -r /workspace/requirements.txt; fi && if [ -f ~/.ssh/id_rsa ]; then chmod 600 ~/.ssh/id_rsa; fi && if [ -f ~/.ssh/id_rsa.pub ]; then chmod 644 ~/.ssh/id_rsa.pub; fi && eval \"$(ssh-agent -s)\" && if [ -f ~/.ssh/id_rsa ]; then ssh-add ~/.ssh/id_rsa; fi && git config --global user.name \"oleg121203\" && git config --global user.email \"oleg1203@gmail.com\" && git config --global push.autoSetupRemote true && git config --global push.default current && echo 'export PS1=\"${VIRTUAL_ENV_PROMPT}${PS1}\"' >> ~/.bashrc && source ~/.bashrc"
+    "features": {
+        "ghcr.io/devcontainers/features/git:1": {
+            "version": "latest",
+            "ppa": true
+        }
+    },
+    "postCreateCommand": {
+        "1-permissions": "sudo chown -R vscode:vscode /workspace && chmod +x .devcontainer/init-scripts/*.sh",
+        "2-setup": ".devcontainer/init-scripts/setup.sh"
+    }
 }
