Добавить игнорирование папки резервных копий и скрытие её в настройках среды разработки

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -119,7 +119,10 @@
                 "python.defaultInterpreterPath": "/workspace/.venv/bin/python",
                 "python.analysis.extraPaths": [
                     "/workspace/.venv/lib/python3.12/site-packages"
-                ]
+                ],
+                "files.exclude": {
+                    "backup/": true
+                }
             },
             "extensions": [
                 "ms-python.python",
