--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -1,4 +1,3 @@
-// filepath: /workspace/.github/workflows/autocommit.yml
 name: Auto Commit
 
 on:
@@ -22,10 +21,12 @@ jobs:
         git config user.email "bot@example.com"
 
     - name: Add changes
-      run: git add .
+      run: |
+        git add .
+        git reset .backups/
 
     - name: Commit changes
-      run: git commit -m "Auto-commit: Зміни у проєкті" -m "Опис змін:\n- Автоматизовано через GitHub Actions"
+      run: git commit -m "Auto-commit: Зміни у проєкті" -m "Опис змін:\n- Автоматизовано через GitHub Actions" || echo "No changes to commit"
 
     - name: Push changes
-      run: git push
+      run: git push || echo "No changes to push"
