--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -1,4 +1,3 @@
-# -*- coding: utf-8 -*-
 name: Auto Commit
 
 on:
@@ -15,19 +14,30 @@ jobs:
       uses: actions/checkout@v2
       with:
         ref: update-autocommit
+        fetch-depth: 0
 
     - name: Set up Git
       run: |
         git config user.name "Auto Commit Bot"
         git config user.email "bot@example.com"
 
-    - name: Add changes
+    - name: Check and commit unfinished changes
       run: |
-        git add .
-        git reset .backups/
+        if git diff-index --quiet HEAD --; then
+          echo "No changes to commit"
+        else
+          git add -A
+          git reset .backups/
+          git commit -m "Auto-commit: Unfinished changes" -m "Changes description:\n- Automated cleanup of unfinished changes" || echo "No changes to commit"
+        fi
 
-    - name: Commit changes
-      run: git commit -m "Auto-commit: Project changes" -m "Changes description:\n- Automated via GitHub Actions" || echo "No changes to commit"
+    - name: Check for incomplete commits
+      run: |
+        if git status --porcelain | grep -q '^??'; then
+          git add -A
+          git reset .backups/
+          git commit -m "Auto-commit: Add untracked files" -m "Changes description:\n- Adding previously untracked files" || echo "No untracked files to commit"
+        fi
 
     - name: Push changes
       run: git push || echo "No changes to push"
