Обновлены параметры модели Qwen 2.5 Coder в конфигурации и удалены устаревшие модели

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -123,6 +123,7 @@
                 "continue.enabled": true,
                 "continue.model": {
                     "name": "qwen2.5-coder:1.5b",
+                    "provider": "ollama",
                     "endpoint": "http://172.17.0.1:11434",
                     "temperature": 0.1,
                     "context_length": 8192
