Добавлены параметры apiVersion в конфигурацию модели Qwen 2.5 Coder и обновлены настройки для продолжения работы

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -137,6 +137,7 @@
                     "fixBugs"
                 ],
                 "continue.sites": [
+                    "chat",
                     "refactor"
                 ],
                 "continue.terminalRootPath": "${workspaceFolder}"
