--- a/.gitignore
+++ b/.gitignore
@@ -199,3 +199,4 @@ backup/
 # Continue - разрешаем версионирование
 #.continue/
 .continue/.utils/.chromium-browser-snapshots/chromium/linux-1397779/chrome-linux/chrome
+.continue/.utils/.chromium-browser-snapshots/
